--- a/index.html
+++ b/index.html
@@ -1,69 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><b>Fangjian Lin 林方坚</b></title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<title>个人简介</title>
 </head>
 <body>
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<img src="linfangjian.png" alt="my png">
-				</div>
-				<div class="col-md-8">
-					<!-- <h1>您的标题</h1> -->
-				</div>
-			</div>
-		</div>
-	</header>
-
-	<section class="container mt-5">
-		<!-- <h2>个人介绍</h2> -->
-		<p>I graduated from North China Electric Power University for my undergraduate degree and Xinjiang University for my master's degree. My research interest is computer vision. I have conducted research internships at Baidu Research Institute, Shanghai AI Labh and a Alibaba Dharma Institute.</p>
-	</section>
-
-	<section class="container mt-5">
-		<h2>Fully transformer networks for semantic image segmentation</h2>
-		<ul>
-			<li><a href="https://arxiv.org/abs/2106.04108">arXiv</a></li>
-		</ul>
-	</section>
-
-    <section class="container mt-5">
-		<h2>Full-scale Selective Transformer for Semantic Segmentation</h2>
-		<ul>
-			<li><a href="https://openaccess.thecvf.com/content/ACCV2022/papers/Lin_Full-scale_Selective_Transformer_for_Semantic_Segmentation_ACCV_2022_paper.pdf">ACCV22</a></li>
-		</ul>
-	</section>
-
-    <section class="container mt-5">
-		<h2>StructToken: Rethinking Semantic Segmentation with Structural Prior</h2>
-		<ul>
-			<li><a href="https://openaccess.thecvf.com/content/ACCV2022/papers/Lin_Full-scale_Selective_Transformer_for_Semantic_Segmentation_ACCV_2022_paper.pdf">IEEE TCSVT</a></li>
-		</ul>
-	</section>
-
-    <section class="container mt-5">
-		<h2>Exploring vision transformer layer choosing for semantic segmentation</h2>
-		<ul>
-			<li><a href="None">IEEE ICASSP23</a></li>
-		</ul>
-	</section>
-
-    <section class="container mt-5">
-		<h2>Cross-scale sampling transformer for semantic image segmentation</h2>
-		<ul>
-			<li><a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs220976">JIFS</a></li>
-		</ul>
-	</section>
-
-
-
+	<h1>个人简介</h1>
+	<img src="your_profile_picture.jpg" alt="Your Profile Picture">
+	<p>在这里写下你的个人简介。</p>
+	<h2>发表的文章</h2>
+	<ul>
+		<li><a href="link_to_article_1">文章1标题</a></li>
+		<li><a href="link_to_article_2">文章2标题</a></li>
+		<li><a href="link_to_article_3">文章3标题</a></li>
+	</ul>
 </body>
 </html>
