--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><b>Fangjian Lin 林方坚</b></title>
+	<title><b>FangjianLin</b></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -18,48 +18,39 @@
 				</div>
 				<div class="col-md-8">
 					<h1><b>Fangjian Lin 林方坚</b></h1>
+                    <section>
+						<!-- <h2>个人介绍</h2> -->
+						<p>I graduated from North China Electric Power University for my undergraduate degree and Xinjiang University for my master's degree. My research interest is computer vision. I have conducted research internships at Baidu Research Institute, Shanghai AI Labh and a Alibaba Dharma Institute.</p>
+					</section>
 				</div>
 			</div>
 		</div>
 	</header>
 
-	<section class="container mt-5">
-		<!-- <h2>个人介绍</h2> -->
-		<p>I graduated from North China Electric Power University for my undergraduate degree and Xinjiang University for my master's degree. My research interest is computer vision. I have conducted research internships at Baidu Research Institute, Shanghai AI Labh and a Alibaba Dharma Institute.</p>
-	</section>
 
 	<section class="container mt-5">
-		<h2>Fully transformer networks for semantic image segmentation</h2>
+		<h2>Paper List</h2>
 		<ul>
-			<li><a href="https://arxiv.org/abs/2106.04108">arXiv</a></li>
-		</ul>
-	</section>
-
-    <section class="container mt-5">
-		<h2>Full-scale Selective Transformer for Semantic Segmentation</h2>
-		<ul>
-			<li><a href="https://openaccess.thecvf.com/content/ACCV2022/papers/Lin_Full-scale_Selective_Transformer_for_Semantic_Segmentation_ACCV_2022_paper.pdf">ACCV22</a></li>
-		</ul>
-	</section>
-
-    <section class="container mt-5">
-		<h2>StructToken: Rethinking Semantic Segmentation with Structural Prior</h2>
-		<ul>
-			<li><a href="https://openaccess.thecvf.com/content/ACCV2022/papers/Lin_Full-scale_Selective_Transformer_for_Semantic_Segmentation_ACCV_2022_paper.pdf">IEEE TCSVT</a></li>
-		</ul>
-	</section>
-
-    <section class="container mt-5">
-		<h2>Exploring vision transformer layer choosing for semantic segmentation</h2>
-		<ul>
-			<li><a href="None">IEEE ICASSP23</a></li>
-		</ul>
-	</section>
-
-    <section class="container mt-5">
-		<h2>Cross-scale sampling transformer for semantic image segmentation</h2>
-		<ul>
-			<li><a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs220976">JIFS</a></li>
+			<li>
+				<a href="https://arxiv.org/abs/2106.04108">Fully transformer networks for semantic image segmentation</a>
+				<span>arXiv</span>
+			</li>
+			<li>
+				<a href="https://openaccess.thecvf.com/content/ACCV2022/papers/Lin_Full-scale_Selective_Transformer_for_Semantic_Segmentation_ACCV_2022_paper.pdf">Full-scale Selective Transformer for Semantic Segmentation</a>
+				<span>ACCV2022</span>
+			</li>
+			<li>
+				<a href="https://ieeexplore.ieee.org/abstract/document/10058990/">StructToken: Rethinking Semantic Segmentation with Structural Prior</a>
+				<span>IEEE TCSVT</span>
+			</li>
+            <li>
+				<a href="None">Exploring vision transformer layer choosing for semantic segmentation</a>
+				<span>IEEE ICASSP2023</span>
+			</li>
+            <li>
+				<a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs220976">Cross-scale sampling transformer for semantic image segmentation</a>
+				<span>JIFS</span>
+			</li>
 		</ul>
 	</section>
 
