--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<img src="linfangjian.png" alt="my png">
 				</div>
 				<div class="col-md-8">
-					<h1><b>Fangjian Lin 林方坚</b></h1>
+					<h1>Fangjian Lin 林方坚</h1>
                     <section>
 						<!-- <h2>个人介绍</h2> -->
 						<p>I graduated from North China Electric Power University for my undergraduate degree and Xinjiang University for my master's degree (2016-2023). My research interest is computer vision. I have conducted research internships at Baidu Research Institute, Shanghai AI Lab and  Alibaba Group.</p>
