--- a/index.html
+++ b/index.html
@@ -1,60 +1,152 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<title><b>FangjianLin</b></title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<link rel="shortcut icon" href="myIcon.ico">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+
+
+</script>
 </head>
 <body>
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<img src="linfangjian.png" alt="my png">
+	
+<nav class="navbar navbar-dark navbar-expand-lg fixed-top">
+    <div id="layout-menu">
+        <a href="#">Home</a>
+        <a href="#biography">Biography</a>
+        <a href="#publications">Publications</a>
+    </div>
+</nav>
+	
+<div id="layout-content" style="margin-top:25px">
+<table>
+	<tbody>
+		<tr>
+			<td width="670">
+				<div id="toptitle">					
+					<h1><font face="Arial"> Fangjian Lin </font></h1>  <h1><font face="Arial"> 林方坚 </font></h1>
 				</div>
-				<div class="col-md-8">
-					<h1>Fangjian Lin 林方坚</h1>
-                    <section>
-						<!-- <h2>个人介绍</h2> -->
-						<p>I graduated from North China Electric Power University for my undergraduate degree and Xinjiang University for my master's degree (2016-2023). My research interest is computer vision. I have conducted research internships at Baidu Research, Shanghai AI Lab and  Alibaba Group.</p>
-					</section>
-				</div>
-			</div>
-		</div>
-	</header>
+
+				<h3><font face="Arial"> Education</font></h3>
+				<p><font face="Arial"> 
+					Bachelor's education: North China Electric Power University, 2016-2020 <br>
+					Master's education: Xinjiang University, 2020-2023 <br>
+				
+				<h3><font face="Arial"> CV Research Internships</font></h3>
+					<p><font face="Arial"> 
+						Baidu Research (IDL), 2020.12-2021.12 <br>
+						Shanghai AI Laboratory, 2021.12-2022.07 <br>
+						Alibaba Group, 2022.07-2023.03 <br>
+					<br>
+					<em>Email: <a href="mailto:linfangjian01@163.com">linfangjian01@163.com</a> </em> <br>
+				        <em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="linfangjian01@gmail.com">linfangjian01@gmail.com</a></em> <br>
+				</font></p>
+			</td>
+			<td>
+				<img src="./linfangjian.png" border="0" width="240"><br>
+			</td>
+		</tr><tr>
+	</tr></tbody>
+</table>
 
 
-	<section class="container mt-5">
-		<h2>Paper List</h2>
-		<ul>
-			<li>
-				<a href="https://arxiv.org/abs/2106.04108">Fully transformer networks for semantic image segmentation</a>
-				<span>arXiv</span>
-			</li>
-			<li>
-				<a href="https://openaccess.thecvf.com/content/ACCV2022/papers/Lin_Full-scale_Selective_Transformer_for_Semantic_Segmentation_ACCV_2022_paper.pdf">Full-scale Selective Transformer for Semantic Segmentation</a>
-				<span>ACCV2022</span>
-			</li>
-			<li>
-				<a href="https://ieeexplore.ieee.org/abstract/document/10058990/">StructToken: Rethinking Semantic Segmentation with Structural Prior</a>
-				<span>IEEE TCSVT</span>
-			</li>
-            <li>
-				<a href="None">Exploring vision transformer layer choosing for semantic segmentation</a>
-				<span>IEEE ICASSP2023</span>
-			</li>
-            <li>
-				<a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs220976">Cross-scale sampling transformer for semantic image segmentation</a>
-				<span>JIFS</span>
-			</li>
-		</ul>
-	</section>
+<!-- <br /> -->
+	
+<div id="biography">
+<h2><font face="Arial"> Biography </font></h2>
+<p style="text-align:justify"><font face="Arial">
+	
+	I graduated from North China Electric Power University for my undergraduate degree and Xinjiang University for my master's degree (2016-2023). 
+	I have conducted research internships at Baidu Research, Shanghai AI Lab and  Alibaba Group.
+	
+</font></p> 
+<p style="text-align:justify"><font face="Arial">
+	My research interests lie in the fields of deep learning, computer vision, and visual perception for autonomous driving. 
+	Specifically, I focus on 
+	1) designing general-purpose models for various tasks (classification, detection, and segmentation); 
+	2) developing multimodal architectures for large-scale models; and 
+	3) exploring prompt engineering techniques. 
+	In addition, I am actively seeking a potential PhD advisor.
+</font></p>
+
+
+	<h2><font face="Arial"> News </font></h2>
+<ul style="list-style-type:none">
+   <p style="text-align:justify; line-height: 150%;"><font face="Arial">
+	[04/2023] An article submitted to IEEE TCSVT received a minor revision <br>
+	[03/2023] An article submitted to IJCAI 2023 received a score of 7764 <br>
+	[03/2023] Completed my master's thesis <br>
+	[02/2023] An article submitted to IEEE ICASSP 2023 was accepted <br>
+   </font></p>
+</ul>
+
+
+<div id="publications">
+<h2><font face="Arial"> Publications </font>  <font face="Arial" size="3"><a href="https://scholar.google.com/citations?user=vkCS9vcAAAAJ&hl=en">[Google Scholar]</a></font> </h2>
+
+<p><font face="Arial" size="3">Summary: ACCV, ICASSP, TCSVT. </font> </p>
+
+
+<p><font face="Arial" size="4"><b>2023</b></font></p> 
+<ul>
+     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+		StructToken: Rethinking semantic segmentation with structural prior <br> 
+         <i> <b>Fangjian Lin</b>, Zhanhao Liang, Sitong Wu, Junjun He, Kai Chen, Shengwei Tian. </i><br> 
+		 IEEE Transactions on Circuits and Systems for Video Technology (<b>IEEE TCSVT</b>). <br>
+	       [<a href="https://ieeexplore.ieee.org/abstract/document/10058990">paper</a>]
+	       [<a href="https://arxiv.org/abs/2203.12612">arXiv</a>]
+	       [<a href="https://github.com/RockeyCoss/StructToken">code</a>] 
+          </font>
+	 </p> </li>
+
+
+     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+		Exploring vision transformer layer choosing for semantic segmentation <br> 
+         <i>   <b>Fangjian Lin</b>, Yizhe Ma, Shengwei Tian. </i><br> 
+		 IEEE International Conference on Acoustics, Speech, and Signal Processing (<b>IEEE ICASSP</b>), accepted, 2023. <br>
+	  </font>
+	 </p> </li>
+	
+</ul>		
+
+
+<p><font face="Arial" size="4"><b>2022</b></font></p> 
+<ul>
+
+     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+		Full-scale Selective Transformer for Semantic Segmentation <br> 
+         <i>   <b>Fangjian Lin</b>, Sitong Wu, Yizhe Ma, Shengwei Tian. </i><br> 
+		 Proceedings of the Asian Conference on Computer Vision (<b>ACCV</b>). <br>
+		 [<a href="https://openaccess.thecvf.com/content/ACCV2022/papers/Lin_Full-scale_Selective_Transformer_for_Semantic_Segmentation_ACCV_2022_paper.pdf">paper</a>]
+		 [<a href="https://openaccess.thecvf.com/content/ACCV2022/supplemental/Lin_Full-scale_Selective_Transformer_ACCV_2022_supplemental.pdf">supp</a>]
+	  </font>
+	 </p> </li>
+	
+     <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+		Cross-scale sampling transformer for semantic image segmentation <br> 
+         <i>   Yizhe Ma, Long Yu, <b>Fangjian Lin</b>, Shengwei Tian </i><br> 
+		 Journal of Intelligent & Fuzzy Systems, vol. 44, no. 2, pp. 2895-2907, 2023 <br>
+	       [<a href="https://content.iospress.com/articles/journal-of-intelligent-and-fuzzy-systems/ifs220976">paper</a>] 
+	  </font>
+	 </p> </li>
+	
+	
+</ul>		
+
+
+<p><font face="Arial" size="4"><b>2021</b></font></p> 
+<ul>
+   <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+		Fully transformer networks for semantic image segmentation <br> 
+         <i>   Sitong Wu*, Tianyi Wu*, <b>Fangjian Lin</b>*, Shengwei Tian, Guodong Guo </i><br> 
+		 	Arxiv Tech Report, 2021. <br>
+	    [<a href="https://arxiv.org/abs/2106.04108">arXiv</a>]
+	  </font>
+	 </p> </li>	
+	
+	
+</ul>	
 
 
 
-</body>
-</html>
+</body></html>
