--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
+<meta name="keywords" content="Fangjian Lin"> 
+<link rel="stylesheet" href="jemdoc.css" type="text/css">
+<title>Fangjian Lin's homepage</title>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-87320911-1', 'auto');
+  ga('send', 'pageview');
 
 </script>
 </head>
