--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 						Shanghai AI Laboratory, 2021.12-2022.07 <br>
 						Alibaba Group, 2022.07-2023.03 <br>
 					<br>
-					<em>Email: <a href="mailto:linfangjian01@163.com">linfangjian01@163.com</a> </em> <br>
-				        <em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="linfangjian01@gmail.com">linfangjian01@gmail.com</a></em> <br>
+					<em>Email: <a href="mailto:linfangjian01@163.com">linfangjian01@gmail.com</a> </em> <br>
 				</font></p>
 			</td>
 			<td>
