--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 				<h3><font face="Arial"> Education</font></h3>
 				<p><font face="Arial"> 
-					Bachelor's education: North China Electric Power University, 2016-2020 <br>
-					Master's education: Xinjiang University, 2020-2023 <br>
+					Bachelor: North China Electric Power University, 2016-2020 <br>
+					Master: Xinjiang University, 2020-2023 <br>
 				
 				<h3><font face="Arial"> CV Research Internships</font></h3>
 					<p><font face="Arial"> 
