--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 				<h3><font face="Arial"> CV Research Internships</font></h3>
 					<p><font face="Arial"> 
 						Baidu Research (IDL), 2020.12-2021.12 <br>
-						Shanghai AI Laboratory, 2021.12-2022.07 <br>
-						Alibaba Group, 2022.07-2023.03 <br>
+						Shanghai AI Laboratory (OpenMMLab), 2021.12-2022.07 <br>
+						Alibaba Group (AI-Earth), 2022.07-2023.03 <br>
 					<br>
 					<em>Email: <a href="mailto:linfangjian01@163.com">linfangjian01@gmail.com</a> </em> <br>
 				</font></p>
