--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
      <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
 		Exploring vision transformer layer choosing for semantic segmentation <br> 
          <i>   <b>Fangjian Lin</b>, Yizhe Ma, Shengwei Tian. </i><br> 
-		 IEEE International Conference on Acoustics, Speech, and Signal Processing (<b>IEEE ICASSP</b>), accepted, 2023. <br>
+		 IEEE International Conference on Acoustics, Speech, and Signal Processing (<b>IEEE ICASSP</b>), Accepted, 2023. <br>
 	  </font>
 	 </p> </li>
 	
