--- a/index.html
+++ b/index.html
@@ -157,6 +157,6 @@
 	
 </ul>	
 
-
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Nnxyu5MDarE7C6ziVrsIeWHE7IVuZtAaqhiaG6FL5QI&cl=ffffff&w=a"></script>
 
 </body></html>
