--- a/index.html
+++ b/index.html
@@ -157,6 +157,19 @@
 	
 </ul>	
 
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Nnxyu5MDarE7C6ziVrsIeWHE7IVuZtAaqhiaG6FL5QI&cl=ffffff&w=a"></script>
+<div id="footer">
+	<div id="footer-text"></div>
+	
+        <p><center>
+      	<div id="clustrmaps-widget" style="width:10%">
+     
+		<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=Nnxyu5MDarE7C6ziVrsIeWHE7IVuZtAaqhiaG6FL5QI"></script>
 
+        </div>
+	<p><center><font face="Arial">
+        <br>
+            &copy; Fangjian Lin | Last updated: 2023/4/17.
+        </font></center></p>
+		
+</div>
 </body></html>
