--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<h2><font face="Arial"> News </font></h2>
 <ul style="list-style-type:none">
    <p style="text-align:justify; line-height: 150%;"><font face="Arial">
-	[04/2023] A paper submitted to IEEE TCSVT received a minor revision. <br>
+	[04/2023] A paper submitted to IEEE TCSVT was accepted. <br>
 	[03/2023] A paper submitted to IJCAI 2023 received a score of 7764. <br>
 	[03/2023] Completed my master's thesis. <br>
 	[02/2023] A paper submitted to IEEE ICASSP 2023 was accepted. <br>
