--- a/index.html
+++ b/index.html
@@ -94,11 +94,19 @@
 <div id="publications">
 <h2><font face="Arial"> Publications </font>  <font face="Arial" size="3"><a href="https://scholar.google.com/citations?user=vkCS9vcAAAAJ&hl=en">[Google Scholar]</a></font> </h2>
 
-<p><font face="Arial" size="3">Summary: ACCV, ICASSP, TCSVT. </font> </p>
+<p><font face="Arial" size="3">Summary: ACCV, ICASSP, TCSVT.  *: Equal contributions.</font> </p>
 
 
 <p><font face="Arial" size="4"><b>2023</b></font></p> 
 <ul>
+
+	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+		PRSeg: A Lightweight Patch Rotate MLP Decoder for Semantic Segmentation <br> 
+         <i> Yizhe Ma*, <b>Fangjian Lin*</b>, Sitong Wu, Shengwei Tian, Long Yu. </i><br> 
+		 IEEE Transactions on Circuits and Systems for Video Technology (<b>IEEE TCSVT</b>), Accepted. <br>
+          </font>
+	 </p> </li>
+
      <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
 		StructToken: Rethinking semantic segmentation with structural prior <br> 
          <i> <b>Fangjian Lin</b>, Zhanhao Liang, Sitong Wu, Junjun He, Kai Chen, Shengwei Tian. </i><br> 
