--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 <div id="publications">
 <h2><font face="Arial"> Publications </font>  <font face="Arial" size="3"><a href="https://scholar.google.com/citations?user=vkCS9vcAAAAJ&hl=en">[Google Scholar]</a></font> </h2>
 
-<p><font face="Arial" size="3">Summary: ACCV, ICASSP, TCSVT.  *: Equal contributions.</font> </p>
+<p><font face="Arial" size="3">Summary: ACCV, ICASSP, TCSVT. </font> </p>
+<p><font face="Arial" size="3">*: Equal contributions. </font> </p>
 
 
 <p><font face="Arial" size="4"><b>2023</b></font></p> 
