--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
 <ul>
 
 	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+		UniNeXt: Exploring A Unified Architecture for Vision Recognition <br> 
+         <i>  <b>Fangjian Lin</b>, Jianlong Yuan, Sitong Wu, Fan Wang, Zhibin Wang </i><br> 
+		 	Arxiv Tech Report, 2023. <br>
+	    [<a href="https://arxiv.org/abs/2304.13700">arXiv</a>]
+	  </font>
+	 </p> </li>	
+
+	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
 		PRSeg: A Lightweight Patch Rotate MLP Decoder for Semantic Segmentation <br> 
          <i> Yizhe Ma*, <b>Fangjian Lin*</b>, Sitong Wu, Shengwei Tian, Long Yu. </i><br> 
 		 IEEE Transactions on Circuits and Systems for Video Technology (<b>IEEE TCSVT</b>), Accepted. <br>
