--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
 		PRSeg: A Lightweight Patch Rotate MLP Decoder for Semantic Segmentation <br> 
          <i> Yizhe Ma*, <b>Fangjian Lin*</b>, Sitong Wu, Shengwei Tian, Long Yu. </i><br> 
-		 IEEE Transactions on Circuits and Systems for Video Technology (<b>IEEE TCSVT</b>), Accepted. <br>
+		 IEEE Transactions on Circuits and Systems for Video Technology (<b>IEEE TCSVT</b>). <br>
+		 	[<a href="https://ieeexplore.ieee.org/document/10111049">paper</a>]
           </font>
 	 </p> </li>
 
