--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@
 		 [<a href="https://openaccess.thecvf.com/content/ACCV2022/supplemental/Lin_Full-scale_Selective_Transformer_ACCV_2022_supplemental.pdf">supp</a>]
 	  </font>
 	 </p> </li>
+
+	 <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
+		AxWin Transformer: A Context-Aware Vision Transformer Backbone with Axial Windows <br> 
+         <i>  <b>Fangjian Lin</b>, Yizhe Ma, Sitong Wu, Long Yu, Shengwei Tian </i><br> 
+		 	Arxiv Tech Report, 2022. <br>
+	  </font>
+	 </p> </li>	
 	
      <li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
 		Cross-scale sampling transformer for semantic image segmentation <br> 
