--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 		Exploring vision transformer layer choosing for semantic segmentation <br> 
          <i>   <b>Fangjian Lin</b>, Yizhe Ma, Shengwei Tian. </i><br> 
 		 IEEE International Conference on Acoustics, Speech, and Signal Processing (<b>IEEE ICASSP</b>), Accepted, 2023. <br>
+		 [<a href="https://arxiv.org/abs/2305.01279">arXiv</a>]
 	  </font>
 	 </p> </li>
 	
@@ -153,6 +154,7 @@
 		AxWin Transformer: A Context-Aware Vision Transformer Backbone with Axial Windows <br> 
          <i>  <b>Fangjian Lin</b>, Yizhe Ma, Sitong Wu, Long Yu, Shengwei Tian </i><br> 
 		 	Arxiv Tech Report, 2022. <br>
+			[<a href="https://arxiv.org/abs/2305.01280">arXiv</a>]
 	  </font>
 	 </p> </li>	
 	
