--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
          <i>   <b>Fangjian Lin</b>, Yizhe Ma, Shengwei Tian. </i><br> 
 		 IEEE International Conference on Acoustics, Speech, and Signal Processing (<b>IEEE ICASSP</b>), Accepted, 2023. <br>
 		 [<a href="https://arxiv.org/abs/2305.01279">arXiv</a>]
+		 [<a href="https://ieeexplore.ieee.org/abstract/document/10096645/">paper</a>]
 	  </font>
 	 </p> </li>
 	
