--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 	<h2><font face="Arial"> News </font></h2>
 <ul style="list-style-type:none">
    <p style="text-align:justify; line-height: 150%;"><font face="Arial">
+	[07/2023] A paper submitted to ACM MM was accepted. <br>
 	[04/2023] A paper submitted to IEEE TCSVT was accepted. <br>
 	[03/2023] A paper submitted to IJCAI 2023 received a score of 7764. <br>
 	[03/2023] Completed my master's thesis. <br>
@@ -103,7 +104,7 @@
 	<li> <p style="margin-left: 0px; line-height: 150%; margin-top: 10px; margin-bottom: 10px;"><font face="Arial" size="3"><meta charset="utf-8">
 		UniNeXt: Exploring A Unified Architecture for Vision Recognition <br> 
          <i>  <b>Fangjian Lin</b>, Jianlong Yuan, Sitong Wu, Fan Wang, Zhibin Wang </i><br> 
-		 	Arxiv Tech Report, 2023. <br>
+		 Proceedings of the 31th ACM International Conference on Multimedia (<b>ACM MM</b>), Accepted, 2023. <br>
 	    [<a href="https://arxiv.org/abs/2304.13700">arXiv</a>]
 	  </font>
 	 </p> </li>	
@@ -195,7 +196,7 @@
         </div>
 	<p><center><font face="Arial">
         <br>
-            &copy; Fangjian Lin | Last updated: 2023/4/17.
+            &copy; Fangjian Lin | Last updated: 2023/7/31.
         </font></center></p>
 		
 </div>
