--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 						Baidu Research (IDL), 2020.12-2021.12 <br>
 						Shanghai AI Laboratory (OpenMMLab), 2021.12-2022.07 <br>
 						Alibaba Group (AI-Earth), 2022.07-2023.03 <br>
+						NIO, 2023.06-now <br>
 					<br>
 					<em>Email: <a href="mailto:linfangjian01@163.com">linfangjian01@gmail.com</a> </em> <br>
 				</font></p>
@@ -67,15 +68,16 @@
 <p style="text-align:justify"><font face="Arial">
 	
 	I graduated from North China Electric Power University for my undergraduate degree and Xinjiang University for my master's degree (2016-2023). 
-	I have conducted research internships at Baidu Research, Shanghai AI Lab and  Alibaba Group.
+	I have conducted research internships at Baidu Research, Shanghai AI Lab and Alibaba Group.
+	Since June 2023, I have been working as an Algorithm Engineer at NIO.
 	
 </font></p> 
 <p style="text-align:justify"><font face="Arial">
-	My research interests lie in the fields of deep learning, computer vision, and visual perception for autonomous driving. 
-	Specifically, I focus on 
-	1) designing general-purpose models for various tasks (classification, detection, and segmentation); 
-	2) developing multimodal architectures for large-scale models; and 
-	3) exploring prompt engineering techniques. 
+	My research interests lie in the field of autonomous driving and artificial intelligence. 
+	Specifically, I focus on: 
+	1) autonomous driving perception tasks including OD、TSR、TLD; 
+	2) Vision-Language Models (VLM) and their applications; 
+	3) Retrieval-Augmented Generation (RAG) and AI Agents.
 </font></p>
 
 
@@ -94,7 +96,7 @@
 <div id="publications">
 <h2><font face="Arial"> Publications </font>  <font face="Arial" size="3"><a href="https://scholar.google.com/citations?user=vkCS9vcAAAAJ&hl=en">[Google Scholar]</a></font> </h2>
 
-<p><font face="Arial" size="3">Summary: ACM MM, ACCV, ICASSP, TCSVT. </font> </p>
+<p><font face="Arial" size="3">Reviewer for: IEEE TCSVT, ACM MM, ACCV, ICASSP. </font> </p>
 <p><font face="Arial" size="3">*: Equal contributions. </font> </p>
 
 
